k8s/base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manycat-app
  namespace: manycat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manycat-app
  template:
    metadata:
      labels:
        app: manycat-app
    spec:
      containers:
        - name: app
          image: manycat-app:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: manycat-app
  namespace: manycat
spec:
  type: NodePort
  selector:
    app: manycat-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
